[profile.release]
panic = 'unwind'

[[bin]]
name = 'substrate-weather'
path = 'src/main.rs'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.2'
parking_lot = '0.7.1'
tokio = '0.1'
trie-root = '0.12.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '1d61a492adee6d48569f475705c92699ee3cd69b'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '1d61a492adee6d48569f475705c92699ee3cd69b'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '1d61a492adee6d48569f475705c92699ee3cd69b'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '1d61a492adee6d48569f475705c92699ee3cd69b'

[dependencies.substrate-weather-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '1d61a492adee6d48569f475705c92699ee3cd69b'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '1d61a492adee6d48569f475705c92699ee3cd69b'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '1d61a492adee6d48569f475705c92699ee3cd69b'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '1d61a492adee6d48569f475705c92699ee3cd69b'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '1d61a492adee6d48569f475705c92699ee3cd69b'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '1d61a492adee6d48569f475705c92699ee3cd69b'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '1d61a492adee6d48569f475705c92699ee3cd69b'

[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'substrate-weather'
version = '1.0.0'

[build-dependencies]
vergen = '3'
