[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-weather-runtime-wasm'
version = '1.0.0'

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'

[workspace]
members = []
[dependencies.substrate-weather-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['substrate-weather-runtime/std']
